# schnyder-woods

./: Cargo.toml  README.md  rustfmt.toml
sage/: diameter.sage  schnyder-toolbox.sage  vertexcon.sage
scripts/: .gitignore  build-flipgraphs.sh  diameter.sh  make-binaries.sh  vertexcon.sh
src/: algorithm.rs  arraytree.rs  flipgraph.rs  graph.rs  main.rs  repl.rs  subcommands.rs  util.rs
src/algorithm/: mod.rs
src/flipgraph/: io.rs  mod.rs  random_walk.rs  stats.rs
src/graph/: data_holders.rs  enums.rs  error.rs  guarded_map.rs  guarded_map2.rs  index_store.rs  indices.rs  io.rs  map_index_store.rs  mod.rs  schnyder.rs  vec_index_store.rs
src/graph/index_store/: map_index_store.rs  mod.rs  vec_index_store.rs
src/graph/schnyder/: algorithm.rs  mod.rs
src/petgraph_ext/: mod.rs
src/schnyder/: algorithm.rs  alt_debug.rs  enums.rs  figures.rs  io.rs  mod.rs  tikz.rs
