[package]
name = "schnyderflip"
version = "0.1.0"
authors = ["Julian Schick <julian.schick@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "^0.5.1"
typed_index_derive = "^0.1.4"
itertools = "0.9.0"
array_tool = "1.0.3"
rand = "0.7.3"
