[package]
name = "schnyderflip"
version = "0.1.0"
authors = ["Julian Schick <julian.schick@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#petgraph = { version = "0.5.1", features = ["serde-1"] }
serde = { version = "1.0.117", features = ["derive"] }
#serde_json = "1.0.59"
serde_cbor = "0.11.1"
#bincode = "1.3.1"
#typed_index_derive = "0.1.4"
itertools = "0.9.0"
array_tool = "1.0.3"
rand = "0.7.3"
chrono = "0.4.15"
lazy_static = "1.4.0"
bimap = { version = "0.5.2", features = ["serde"] }
take-until = "0.1.0"
bitvec = "0.19.3"
#trees = "0.3.0"
clap = "~3.0.0-beta.2"
rustyline = "6.3.0"
